# nexus

./: .gitignore  README.md  pyproject.toml
backend/: app.py  auth.py  sample_data.py
backend/graph/: builder.py  utils.py
backend/models/: concepts.py  courses.py  graph.py  users.py
backend/sample_data/: calculus.py
backend/sample_data/calculus/: concepts.json
frontend/: .prettierrc  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: Graph.tsx
frontend/src/app/courses/: page.tsx
frontend/src/app/courses/[courseId]/: page.tsx
frontend/src/app/courses/[courseId]/concepts/[conceptId]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: Breadcrumb.tsx  CoursesList.tsx  Graph.tsx  LogoutButton.tsx  Navbar.tsx  PageLayout.tsx
frontend/src/context/: UserContext.tsx
frontend/src/types/: course.ts  graph.ts  user.ts
tests/: test_graph.py
