[tool.poetry]
name = "nexus"
version = "0.1.0"
description = "A learning portal that models courses as concept maps."
authors = ["Alisha Manocha <alisha.manocha04@gmail.com>"]
readme = "README.md"
packages = [
    { include = "backend" }
]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.117.1"
uvicorn = "^0.36.0"
pymongo = "^4.15.1"
networkx = "^3.5"
pydantic = "^2.11.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
